--- a/cssMemSlider/style.css
+++ b/cssMemSlider/style.css
@@ -5,12 +5,15 @@
 }
 body {
     background-color: #2e2a2a;
+    margin-top: 10px;
 }
 #slider {
+   padding: 0 10px;
     display: grid;
     grid-template-columns: 1fr;
+    grid-gap: 20px;
     margin: 0 auto;
-    width: 800px;
+    width: 1500px;
     max-width: 100%;
  }
  #slider input[type=radio] {
@@ -47,7 +50,7 @@ body {
     transition: margin-left 800ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
     width: 400%;
     line-height: 0;
-    height: 300px;
+    height: 560px;
  }
  #slides .slide {
     width: 25%;
@@ -58,23 +61,7 @@ body {
     height: 100%;
     color: #fff;
  }
- #slides .slide_1 {
-    background: url(/mem1.jpg)no-repeat;
-    background-size: cover;
 
- }
- #slides .slide_2 {
-    background: url(/mem2.jpg);
-    background-size: cover;
- }
- #slides .slide_3 {
-    background: url(/mem3.jpg);
-    background-size: cover;
- }
- #slides .slide_4 {
-    background: url(/mem4.jpg);
-    background-size: cover ;
- }
  #bullets {
     text-align: center;
  }
@@ -91,6 +78,7 @@ body {
  #l3:hover, 
  #l4:hover {
     background: rgb(118, 170, 218);
+    transition: 0.6s ease-in-out;;
  }
 
  #l1:active, 
@@ -144,8 +132,22 @@ body {
     height: 20px;
     color: #fff;
  }
- 
 
+img {
+   width: 100%;
+   height: 100%;
+}
+ 
+@media (max-width: 800px){
+   #slides {
+      background: #2e2a2a;
+      position: relative;
+      z-index: 1;
+   }
+   #slides2 {
+      grid-row: 3/4;
+   }
+}
 
 
 
